force-app/main/default/objects/Asset/fields/After_sales_service_dealer_account__c.field-meta.xml
<CustomField>
    <fullName>After_sales_service_dealer_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>After sales service dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer_Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (After sales service dealer) Account</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>