force-app/main/default/objects/Asset/fields/Dealer_Old_Id__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Old_Id__c</fullName>
    <label>Dealer Old Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>