force-app/main/default/objects/Asset/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <label>Engine No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>