force-app/main/default/objects/Asset/fields/Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Entry_ID__c</fullName>
    <externalId>true</externalId>
    <label>Entry ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>