force-app/main/default/objects/Asset/fields/Key_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Date__c</fullName>
    <label>Key Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>