force-app/main/default/objects/Asset/fields/Mobile_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_2__c</fullName>
    <label>Mobile Phone 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>