force-app/main/default/objects/Asset/fields/Moo__c.field-meta.xml
<CustomField>
    <fullName>Moo__c</fullName>
    <label>Moo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>