force-app/main/default/objects/Asset/fields/Product_Description_Diesel_Engine__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_Diesel_Engine__c</fullName>
    <label>Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>