force-app/main/default/objects/Asset/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>