force-app/main/default/objects/Asset/fields/Purchase_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Status__c</fullName>
    <label>Purchase Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>