force-app/main/default/objects/Asset/fields/Shop_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer_Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Shop Name) Account</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>