force-app/main/default/objects/Asset/listViews/All_Assets.listView-meta.xml
<ListView>
    <fullName>All_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Asset_Owner_Name__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Engine_Code__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>DBM_Order__c</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>Shop_Name__c</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
    <sharedTo>
        <roleAndSubordinates>Overseas</roleAndSubordinates>
    </sharedTo>
</ListView>