force-app/main/default/objects/Asset/listViews/Diesel_Engine.listView-meta.xml
<ListView>
    <fullName>Diesel_Engine</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Firstname__c</columns>
    <columns>Lastname__c</columns>
    <columns>Engine_Code__c</columns>
    <columns>Product_Description_Diesel_Engine__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Purchase_Status__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Dealer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Diesel Engine</label>
</ListView>